--- a/Other Files/Application Data/macOS/AlphaLive Updater.app/Contents/Info.plist
+++ b/Other Files/Application Data/macOS/AlphaLive Updater.app/Contents/Info.plist
@@ -3,7 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>12F45</string>
+	<string>19H114</string>
+	<key>CFBundleDisplayName</key>
+	<string>AlphaLive Updater</string>
 	<key>CFBundleExecutable</key>
 	<string>AlphaLive Updater</string>
 	<key>CFBundleIdentifier</key>
@@ -13,28 +15,36 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.4</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>MacOSX</string>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.4</string>
+	<string>1.1.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>5A3005</string>
+	<string>12D4e</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>11.1</string>
 	<key>DTSDKBuild</key>
-	<string>9L31a</string>
+	<string>20C63</string>
 	<key>DTSDKName</key>
-	<string>macosx10.5</string>
+	<string>macosx11.1</string>
 	<key>DTXcode</key>
-	<string>0502</string>
+	<string>1240</string>
 	<key>DTXcodeBuild</key>
-	<string>5A3005</string>
+	<string>12D4e</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.9</string>
 	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>nu desine</string>
+	<string></string>
 </dict>
 </plist>
